# EasyNotes

./: MakeFile  README.md  docker-compose.yml  pyproject.toml
chrome_plugin/: background.js  manifest.json  note.html  note.js  popup.html  popup.js  user.js
easy_notes_api/: __init__.py  __main__.py
easy_notes_api/config/: __init__.py  default.py  utils.py
easy_notes_api/db/: alembic.ini
easy_notes_api/db/alembic/: env.py
easy_notes_api/db/alembic/versions/: 443d3e959dfb_update_notes_table.py  66e6f14eb66a_update_notes_table.py  7a1ba5ef935b_create_tables.py
easy_notes_api/db/connection/: session.py
easy_notes_api/db/models/: __init__.py  notes.py  user.py
easy_notes_api/endpoints/: __init__.py  notes.py  user.py
easy_notes_api/schemas/: __init__.py  note.py  register.py
easy_notes_api/utils/: enum_exeptions.py  note.py  user.py
